--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,17 @@ endif()
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS message_generation std_msgs roscpp sensor_msgs nav_msgs tf visualization_msgs image_transport nav_msgs) ## actionlib_msgs)
+find_package(catkin REQUIRED COMPONENTS
+  image_transport
+  message_generation
+  nav_msgs
+  nodelet
+  roscpp
+  std_msgs
+  sensor_msgs
+  tf
+  visualization_msgs
+)
 
 find_package(OpenCV)
 include_directories(${OpenCV_INCLUDE_DIRS})
@@ -56,7 +66,16 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-CATKIN_DEPENDS message_runtime geometry_msgs std_msgs
+  CATKIN_DEPENDS
+  image_transport
+  message_generation
+  nav_msgs
+  nodelet
+  roscpp
+  std_msgs
+  sensor_msgs
+  tf
+  visualization_msgs
 )
 
 
@@ -68,11 +87,12 @@ CATKIN_DEPENDS message_runtime geometry_msgs std_msgs
 ## Your package locations should be listed before other locations
 # include_directories(include)
 include_directories(
+  include
   src
   ${catkin_INCLUDE_DIRS}
 )
 
-#ratslam library
+# ratslam library
 add_library(ratslam src/ratslam/experience_map.cpp src/ratslam/posecell_network.cpp src/ratslam/local_view_match.cpp src/ratslam/visual_odometry.cpp)
 
 target_link_libraries(ratslam
@@ -81,6 +101,22 @@ target_link_libraries(ratslam
 
 # uncomment is you don't have irrlicht installed
 add_definitions("-DHAVE_IRRLICHT")
+
+# ratslam ROS library
+add_library(ratslam_ros
+  src/ratslam_ros/experience_map_ros.cpp
+  src/ratslam_ros/local_view_ros.cpp
+  src/ratslam_ros/pose_cell_ros.cpp
+  src/ratslam_ros/visual_odometry_ros.cpp
+  src/ratslam_ros/nodelets.cpp
+)
+target_link_libraries(ratslam_ros
+  ratslam
+  ${catkin_LIBRARIES}
+  ${IRRLICHT_LIBRARIES}
+  ${OPENGL_LIBRARIES}
+  ${OpenCV_LIBRARIES}
+)
 
 add_executable(ratslam_lv src/main_lv.cpp)
 target_link_libraries(ratslam_lv
