--- a/package.xml
+++ b/package.xml
@@ -31,6 +31,7 @@
   <build_depend>boost</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>message_runtime</build_depend>
+  <build_depend>nodelet</build_depend>
 
   <run_depend>libopencv-dev</run_depend>
   <run_depend>libirrlicht-dev</run_depend>
@@ -47,6 +48,11 @@
   <run_depend>boost</run_depend>
   <run_depend>message_generation</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>nodelet</run_depend>
+
+  <export>
+    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
+  </export>
 
 </package>
 
